P3/test/pl0/error/error18.pl0
var a;

begin
	a:=1;
	while a<1;
end.
